--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ edition = "2018"
 serenity = "0.8.6"
 dotenv = "0.15.0"
 redis = "*"
+rocket = "0.4.5"
+reqwest = { version = "0.10", features = [] }
