--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "reaccionar"
 version = "0.1.0"
-authors = ["Ian Reese <kalissaac@protonmail.com>"]
+authors = ["Ian Reese <kalissaac@protonmail.com>", "The Code Weaver <thecodeweaver27@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
